<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/dice"
        android:contentDescription="@string/description" />

    <Button
        android:id="@+id/change_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/my_button2"
        android:onClick="changeNames"
        android:padding="10dp"
        android:text="@string/change_names"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/singlePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button"
        android:onClick="singlePlayer"
        android:padding="10dp"
        android:text="@string/single_player"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/multiPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/multiPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button"
        android:onClick="multiPlayer"
        android:padding="10dp"
        android:text="@string/multi_player"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/map1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlePlayer" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/credit"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/snakes_y_ladders"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/map1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/description"
        android:onClick="mapOne"
        app:layout_constraintBottom_toTopOf="@+id/change_names"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiPlayer"
        app:srcCompat="@drawable/board"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/map2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="mapTwo"
        app:layout_constraintBottom_toTopOf="@+id/change_names"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiPlayer"
        app:srcCompat="@drawable/board2"
        android:contentDescription="@string/description" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/change_names"
        app:layout_constraintEnd_toStartOf="@+id/map2"
        app:layout_constraintStart_toEndOf="@+id/map1"
        app:layout_constraintTop_toBottomOf="@+id/multiPlayer"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>